# grant-radar-kr

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: sample_company.json
data/fixtures/: golden_announcements.json
data/reference/: region_mapping.json
docs/: api-observations.md  architecture.md  eligibility-rules.md  limitations.md  validation-sample.md
scripts/: cross_check.py
src/grant_radar/: __init__.py  __main__.py  config.py
src/grant_radar/api/: kstartup.py
src/grant_radar/models/: announcement.py  company.py  decision.py
src/grant_radar/normalization/: kstartup.py
src/grant_radar/reporting/: console.py
src/grant_radar/rules/: age.py  applicant_type.py  base.py  business_age.py  region.py
src/grant_radar/services/: evaluation.py  ingestion.py
src/grant_radar/storage/: sqlite.py
tests/: factories.py  golden_expected.json  test_age_rule.py  test_applicant_type_rule.py  test_business_age_rule.py  test_cli.py  test_company.py  test_config.py  test_evaluation.py  test_golden.py  test_kstartup_client.py  test_normalization.py  test_region_rule.py  test_reporting.py  test_storage.py
