[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grant-radar-kr"
version = "0.1.0"
description = "K-Startup 공개 데이터를 수집하고 가상회사의 객관적 조건과 비교하여 검토 우선순위를 제공하는 실험적 의사결정 보조 프로젝트"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
